# tst_auth_svc

./: .gitignore  Makefile  README.md  pyproject.toml
frontend_demo/: index.html  main.js  style.css
migrations/: env.py
src/tst_auth_svc/: app.py  config.py  google_oauth_client.py  main.py
src/tst_auth_svc/models/: __init__.py  base.py  session.py  user.py
src/tst_auth_svc/routers/: google_oauth.py  login.py  logout.py  password_reset.py  password_update.py  registration.py
tests/: conftest.py  test_google_oauth.py  test_login.py  test_logout.py  test_password_reset.py  test_password_update.py  test_register.py  test_secure_db.py
